fixed spacing

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -482,7 +482,7 @@ header {
   z-index: 20;
   display: flex;
   flex-direction: column;
-  margin-top: 6500px;
+  margin-top: 5500px;
   width: 100%;
   height: 56%;
   position: absolute;
@@ -588,7 +588,7 @@ header {
   z-index: 20;
   display: flex;
   flex-direction: column;
-  margin-top: 7100px;
+  margin-top: 6100px;
   width: 100%;
   height: 120px;
   position: absolute;
@@ -683,7 +683,7 @@ header {
 }
 
 //Mobile view
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 480px) {
   .navigation {
     display: none;
   }
@@ -838,6 +838,7 @@ header {
 
   .contact-container {
     width: 100%;
+    margin-top: 7300px !important;
     .contact-all {
       margin-left: 3%;
       width: 90%;
@@ -881,6 +882,7 @@ header {
     }
   }
   .footer-container {
+    margin-top: 7900px !important;
     .built-by {
       font-size: 1.35rem !important;
       margin-left: 20%;
@@ -1054,9 +1056,11 @@ header {
       width: 90%;
       .projects-title {
         font-size: 1.5rem;
+        margin-left: 30%;
       }
     }
     .individual-project {
+      margin-left: 25%;
       .individual-project-title {
         font-size: 1.4rem;
       }
@@ -1071,6 +1075,7 @@ header {
 
   .contact-container {
     width: 100%;
+    margin-top: 7300px !important;
     .contact-all {
       margin-left: 3%;
       width: 90%;
@@ -1114,6 +1119,7 @@ header {
     }
   }
   .footer-container {
+    margin-top: 7900px !important;
     .built-by {
       font-size: 1.4rem !important;
       margin-left: 20%;
